# open3e-bridge

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  bridge.py  pyproject.toml  requirements.txt
.forgejo/workflows/: ci.yml
config/: datapoints.yaml
config/local/: .gitignore  datapoints.example.yaml
config/profiles/: common.yaml  vitocal.yaml  vitodens.yaml
config/templates/: types.yaml
config/translations/: de.yaml  en.yaml
config/user/: names.example.yaml
contrib/: open3e-bridge.service
docs/: AUTO_DISCOVERY.md  CAN_BUS_GUIDE.md  CONFIGURATION.md  EXTRACTED_THREADS_26-34.md  EXTRACTED_THREADS_8-25.md  FIT_GAP_ANALYSIS.md  KNOWN_BUGS.md  NEW_THREADS_2026-02-27.md  OPEN3E_TECHNICAL_REFERENCE.md  SOURCES_INDEX.md  SYSTEMD_SETUP.md  VIESSMANN_THREADS.md  VITOCAL_250A_DOCUMENTATION.md  VITOCAL_250_EXAMPLE.md  search.sh
docs/design/: AUTO_DISCOVERY.md
generators/: base.py  heuristics.py  homeassistant.py  registry.py
open3e_bridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_auto_discovery.py  test_base.py  test_bridge_coverage.py  test_command_templates.py  test_config_overlay.py  test_cop_calculation.py  test_device_mapping.py  test_discovery_binary.py  test_discovery_button.py  test_discovery_number.py  test_discovery_sensor.py  test_discovery_switch.py  test_discovery_water_heater.py  test_error_handling.py  test_generator_climate.py  test_generator_registry.py  test_generator_select.py  test_health_entity.py  test_heuristics.py  test_integration_basic.py  test_integration_extended.py  test_nrc_handling.py  test_phase1_fixes.py  test_phase2_features.py  test_profiles.py  test_safety.py  test_user_overrides.py  test_validate_config.py  test_write_verify.py
tests/e2e/: conftest.py  test_dhw_e2e.py
