[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open3e-bridge"
version = "0.1.0"
description = "Open3E Home Assistant MQTT Discovery Bridge"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "paho-mqtt>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "jinja2",
    "pyright",
]
e2e = [
    "docker>=7.0",
]

[tool.setuptools]
# Include bridge.py as top-level module (alongside generators/ package)
py-modules = ["bridge"]

[tool.setuptools.packages.find]
include = ["generators*", "config*"]

[tool.setuptools.package-data]
config = ["**/*.yaml"]

[project.scripts]
open3e-bridge = "bridge:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: End-to-end tests (require Docker)",
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.pyright]
venvPath = "."
venv = "venv"
pythonVersion = "3.10"
typeCheckingMode = "basic"
exclude = ["venv", "build", "dist", "docs", "tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "C9", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106", "S603", "S701"]  # tests: assert, hardcoded passwords, subprocess, jinja2 autoescape

[tool.ruff.lint.mccabe]
max-complexity = 15
